# pgmold

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SHARED_TASK_NOTES.md
.beads/: issues.jsonl  pgmold.db
.cargo/: audit.toml
.discoveries/: spike-pgmold-273-comment-on-ast-migration.md
.github/workflows/: ci.yml  drift-check-example.yml.example  pages.yml  release.yml
benches/: performance.rs
crates/terraform-provider/: Cargo.toml  README.md
docs/: CI_CD_GUIDE.md  SPEC.md
docs/plans/: 2025-01-12-function-config-and-ownership.md  2025-02-04-embeddable-library-design.md  2025-12-01-multi-file-schema-support.md  2025-12-02-multi-schema-support.md  2025-12-03-serial-support.md  2025-12-03-trigger-support-design.md  2025-12-05-baseline-command.md  2025-12-05-dump-command.md  2025-12-05-partitioned-tables.md  2025-12-05-referencing-transition-tables.md  2025-12-25-exclude-include-filters.md  2025-12-25-include-exclude-types.md  2025-12-25-parameter-name-quoting-fix.md  2025-12-25-set-search-path-support.md  2025-12-26-nested-type-filtering.md  2026-01-07-terraform-provider-design.md  2026-01-07-terraform-provider-impl.md
site/: .gitignore  CNAME  astro.config.mjs  index.html  package-lock.json  package.json
site/public/: 404.html  index.html  robots.txt  sitemap.xml
src/: check.rs  dump.rs  lib.rs  main.rs  migrate.rs  prelude.rs
src/api/: error.rs  mod.rs  options.rs  results.rs
src/apply/: mod.rs
src/baseline/: mod.rs  report.rs  unsupported.rs
src/cli/: mod.rs
src/diff/: dependencies.rs  dump_planner.rs  grants.rs  mod.rs  objects.rs  op_key.rs  planner.rs  table_elements.rs  types.rs
src/drift/: mod.rs
src/estimate/: mod.rs
src/expand_contract/: mod.rs
src/filter/: mod.rs
src/lint/: locks.rs  mod.rs
src/model/: mod.rs
src/parser/: comments.rs  dependencies.rs  functions.rs  grants.rs  loader.rs  mod.rs  ownership.rs  preprocess.rs  sequences.rs  tables.rs  tests.rs  unrecognized.rs  util.rs
src/pg/: connection.rs  introspect.rs  mod.rs  sqlgen.rs
src/plan/: mod.rs
src/provider/: drizzle.rs  mod.rs
src/util/: mod.rs
src/validate/: mod.rs
terraform-provider-pgmold/: .gitignore  .goreleaser.yml  README.md  go.mod  main.go
tests/: api.rs  apply.rs  apply_verify.rs  baseline.rs  cli_apply.rs  cli_e2e.rs  constraints.rs  convergence.rs  corpus.rs  corpus_upstream_pg.rs  default_privileges.rs  drift.rs  dump.rs  edge_cases.rs  enums.rs  error_paths.rs  exclusion_constraints.rs  filters.rs  foreign_keys.rs  functions.rs  generated_columns.rs  grants.rs  integration.rs  multi_file.rs  ownership.rs  parser_coverage_triage.rs  partitions.rs  plan.rs  policies.rs  postgis.rs  property_algebraic.rs  property_based.rs  property_convergence.rs  property_generator_invariants.rs  property_parser_roundtrip.rs  semantic_equivalence.rs  sequences.rs  servers.rs  tables.rs  triggers.rs  (+4 more)
tests/common/: mod.rs  strategies.rs
tests/corpus/: README.md  chinook_postgres.sql  handcrafted_auth_like.sql  handcrafted_exclusion_constraints.sql  handcrafted_partitions.sql  (+11 more)
(+43 files in other folders)
