[workspace]
members = ["."]
resolver = "2"

[package]
name = "pgmold"
version = "0.19.12"
edition = "2021"
description = "PostgreSQL schema-as-code management tool"
license = "MIT"
repository = "https://github.com/fmguerreiro/pgmold"
keywords = ["postgresql", "schema", "migrations", "database", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
sqlparser = { package = "pgmold-sqlparser", version = "0.60.1", features = ["visitor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
glob = "0.3"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tempfile = "3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.35", features = ["full"] }

[build-dependencies]
sqlparser = { package = "pgmold-sqlparser", version = "0.60.1", features = ["visitor"] }
